syntax = "proto3";
package json_api;

option go_package = "/.;json_api";

import "json_api/common.api.proto"; // Add this import

// 說明：
// 這個 .proto 檔案定義了 JSON/WebSocket API 的訊息結構。
// 每個 C2S 訊息都包含路由和請求 ID，以便後端進行解析和路由。
// 每個 S2C 訊息也包含這些資訊，以便客戶端進行回應的匹配。
//
// C2S JSON 結構範例:
// {
//   "route": "gamer_info/retrieve",
//   // "request_id": "client-generated-uuid-123", // commented out
//   // ... other fields ...
// }
//
// S2C JSON 結構範例:
// {
//   "route": "gamer_info/retrieve",
//   // "request_id": "client-generated-uuid-123", // commented out
//   "gamer_id": 12345,
//   "nick_name": "PlayerOne",
//   "error": null
// }


// System: gamer_info
//
// Actions:
// - retrieve: Retrieves basic gamer info.
//   - C2S: C2SGamerInfoRetrieve
//   - S2C: S2CGamerInfoRetrieve


// --- 玩家資訊功能 (GamerInfo) ---

// C2S
message C2SGamerInfoRetrieve {
  string route = 1;      // 路由，值應為 "gamer_info/retrieve"
  // string request_id = 2; // 客戶端生成的唯一請求 ID (暫時禁用，待後續實作)
}

// S2C
message S2CGamerInfoRetrieve {
  string route = 1;       // 對應請求的路由
  // string request_id = 2;  // 對應請求的 ID (暫時禁用，待後續實作)
  uint64 gamer_id = 3;
  string nick_name = 4;
  int32 level = 5;
  int64 money = 6;
  int64 gem = 7;
  ErrorResponse error = 8; // 若成功則為 null
}